Color node based on csKeyFld

--- a/css/onimm.css
+++ b/css/onimm.css
@@ -167,7 +167,7 @@ img.modale-arrow-icon {
 
 .circle {
   fill: #ccc;
-  stroke: #ff400d;
+  stroke: #12BD55;
   stroke-width: 1.5px;
   cursor: move;
 }
