--- a/css/onimm.css
+++ b/css/onimm.css
@@ -203,6 +203,11 @@ img.modale-arrow-icon {
   text-align: center;
 }
 
+.instruction-legend {
+  font-style: italic;
+  font-size: 10px;
+}
+
 .info-foreignObject {
     cursor: pointer;
 }
