--- a/css/onimm-theme.css
+++ b/css/onimm-theme.css
@@ -17,26 +17,71 @@
     background: -ms-radial-gradient(center, ellipse cover, white 0%, #b8e2f6 88%, #d9edfc 100%);
     background: radial-gradient(ellipse at center, white 0%, #b8e2f6 88%, #d9edfc 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#d9edfc',GradientType=1 ); }
-    .onimm-container .onimm-svg .bonds-container .active_node {
+    .onimm-container .onimm-svg .bonds-container .is-active-node {
       display: none; }
     .onimm-container .onimm-svg .bonds-container .bond {
       fill: none; }
-    .onimm-container .onimm-svg .jobs-container .jobs .is-draggable {
+    .onimm-container .onimm-svg .jobs-container .jobs {
       cursor: move; }
-    .onimm-container .onimm-svg .jobs-container .jobs .is-dragging {
-      cursor: grabbing; }
-    .onimm-container .onimm-svg .jobs-container .jobs .jobs-circle {
+      .onimm-container .onimm-svg .jobs-container .jobs .is-draggable {
+        cursor: pointer; }
+      .onimm-container .onimm-svg .jobs-container .jobs .jobs-circle {
+        fill: #aaaaaa;
+        stroke-width: 2.5px; }
+      .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body {
+        background: transparent; }
+        .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text {
+          font-size: 14.5px;
+          text-shadow: 0 1px 2px #8b87ff; }
+          .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text::first-letter {
+            text-transform: uppercase; }
+    .onimm-container .onimm-svg .jobs-container .is-active-jobs {
+      font-weight: bold;
+      cursor: help; }
+    .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job {
+      cursor: text;
+      background-color: #fff;
+      -webkit-box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
+      box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
+      -webkit-border-radius: 10px 10px 10px 10px;
+      border-radius: 10px 10px 10px 10px; }
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-title {
+        font-family: Verdana, sans-serif;
+        font-size: 12.5px;
+        color: #0D7B92; }
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-text {
+        font-family: Verdana, sans-serif;
+        font-size: 10px; }
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-text-interet {
+        font-family: Verdana, sans-serif;
+        font-size: 10px; }
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-more {
+        font-family: Verdana, sans-serif;
+        font-weight: bolder;
+        font-size: 8px; }
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close-icon {
+        cursor: default; }
+    .onimm-container .onimm-svg .legend-container .legend-text-foreignObject .legend-text-body .legend-text {
+      font-size: 14px; }
+    .onimm-container .onimm-svg .legend-container .legend-instructions-foreignObject .legend-instructions-body .legend-instructions {
+      font-size: 11px; }
+    .onimm-container .onimm-svg .legend-container .legend-close-foreignObject .legend-close-body .legend-close-icon {
+      cursor: default; }
+    .onimm-container .onimm-svg .historic-container .historic-image-foreignObject .historic-image-body .historic-image {
+      cursor: help; }
+    .onimm-container .onimm-svg .historic-container .historic-title-foreignObject .historic-title-body .historic-title {
+      font-weight: bold;
+      font-size: 15px; }
+    .onimm-container .onimm-svg .historic-container .hist-nodes .hist-circle {
       fill: #aaaaaa;
       stroke-width: 2.5px; }
-    .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body {
-      background: transparent; }
-      .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text {
-        font-size: 15px;
-        text-shadow: 0 1px 2px #8B87FF; }
-        .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text::first-letter {
-          text-transform: uppercase; }
-    .onimm-container .onimm-svg .legend-container .legend-text-foreignObject .legend-text-body .legend-text {
-      /* TODO */ }
-    .onimm-container .onimm-svg .legend-container .legend-instructions-foreignObject .legend-instructions-body .legend-instructions {
-      /* TODO */
-      font-size: 10px; }
+    .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div .hist-nodes-text {
+      font-size: 11px;
+      text-shadow: 0 1px 2px #8b87ff; }
+      .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div .hist-nodes-text::first-letter {
+        text-transform: uppercase; }
+    .onimm-container .onimm-svg .help .help-text-foreignObject .help-text-body .help-text-legend {
+      cursor: help;
+      color: #ff400d; }
+      .onimm-container .onimm-svg .help .help-text-foreignObject .help-text-body .help-text-legend:hover {
+        font-weight: bold; }
