--- a/css/scss/onimm-main.scss
+++ b/css/scss/onimm-main.scss
@@ -11,7 +11,7 @@
 	.onimm-svg {
 
 		.bonds-container {
-			.active_node {
+			.is-active-node {
 				display: none;
 			}
 		}
@@ -47,11 +47,43 @@
 					}
 				}
 			}
+
+			.is-active-jobs {
+
+			}
+		}
+
+		.info-job-foreignObject {
+			.info-job-body {
+				margin: 25px;
+				.info-job {
+					margin: 5px 0 5px 30px;
+					padding: 5px;
+					.info-job-title {
+						margin: -15px 0 10px;
+						text-align: left;	
+					}
+					.info-job-text {
+
+					}
+					.info-job-text-interet {
+
+					}
+					.info-job-more {
+
+					}
+					.info-close-icon {
+						position: relative;
+						margin: -15px 0 0 96%;
+					}
+				}
+			}
 		}
 
 		.legend-container {
 			.legend-image-foreignObject {
 				.legend-image-body {
+					margin: 0;
 					.legend-image {
 
 					}
@@ -62,22 +94,23 @@
 				.legend-text-body {
 					.legend-text {
 						position: relative;
-						margin: 50px;
+						margin: -10px 0 0 12px;
 					}
 				}
 			}
 
 			.legend-instructions-foreignObject {
-				.legend-instructions-legend {
+				.legend-instructions-body {
 					.legend-instructions{
 						position: relative;
-						margin: 50px;
+						margin: -5px 0 0 0;
 					}
 				}
 			}
 
 			.legend-close-foreignObject {
 				.legend-close-body {
+					margin: 0;
 					.legend-close-icon {
 
 					}
@@ -95,6 +128,42 @@
 
 					}
 
+				}
+
+			}
+
+			.historic-title-foreignObject {
+				.historic-title-body {
+					.historic-title {
+
+					}
+				}
+			}
+
+			.hist-nodes {
+				.hist-circle {
+
+				}
+
+				.hist-nodes-foreignObject {
+					.hist-nodes-body {
+						.hist-nodes-div {
+							margin: -10px 0 0 25px;
+							.hist-nodes-text {
+							}
+						}
+					}
+				}
+
+				.hist-bubble-foreignObject {
+					.hist-bubble-body {
+						.hist-bubble {
+							position: relative;
+							margin: -40px 0 6px -8px;
+							width:20px;
+							height:20px;
+						}
+					}
 				}
 
 			}
