--- a/css/onimm-main.css
+++ b/css/onimm-main.css
@@ -53,3 +53,8 @@
     margin: -40px 0 6px -8px;
     width: 20px;
     height: 20px; }
+  .onimm-container .onimm-svg .other-jobs-container .other-jobs .other-jobs-bubble-foreignObject .other-jobs-bubble-body {
+    margin: 0; }
+    .onimm-container .onimm-svg .other-jobs-container .other-jobs .other-jobs-bubble-foreignObject .other-jobs-bubble-body .other-jobs-bubble {
+      position: relative;
+      margin: 0; }
