--- a/css/onimm-main.css
+++ b/css/onimm-main.css
@@ -31,9 +31,18 @@
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-title {
         margin: -15px 0 10px;
         text-align: left; }
-      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close-icon {
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close {
         position: relative;
-        margin: -15px 0 0 96%; }
+        margin: -30px 0 0 96%;
+        padding: 2px;
+        width: 50px;
+        height: 50px; }
+        .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close .info-close-icon {
+          position: relative;
+          margin: 5px; }
+  .onimm-container .onimm-svg .legend-container .legend-foreignObject .legend-body .legend-div {
+    position: relative;
+    margin: -10px; }
   .onimm-container .onimm-svg .legend-container .legend-image-foreignObject .legend-image-body {
     margin: 0; }
   .onimm-container .onimm-svg .legend-container .legend-text-foreignObject .legend-text-body .legend-text {
