--- a/css/onimm-theme.css
+++ b/css/onimm-theme.css
@@ -20,7 +20,8 @@
     .onimm-container .onimm-svg .bonds-container .is-active-node {
       display: none; }
     .onimm-container .onimm-svg .bonds-container .bond {
-      fill: none; }
+      fill: none;
+      stroke-linecap: butt; }
     .onimm-container .onimm-svg .jobs-container .jobs {
       cursor: move; }
       .onimm-container .onimm-svg .jobs-container .jobs .is-draggable {
@@ -40,7 +41,7 @@
       cursor: help; }
     .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job {
       cursor: text;
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.6);
       -webkit-box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
       box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
       -webkit-border-radius: 10px 10px 10px 10px;
@@ -59,8 +60,16 @@
         font-family: Verdana, sans-serif;
         font-weight: bolder;
         font-size: 8px; }
-      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close-icon {
+      .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close .info-close-icon {
         cursor: default; }
+        .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close .info-close-icon:hover {
+          width: 35px; }
+    .onimm-container .onimm-svg .legend-container .legend-foreignObject .legend-body .legend-div {
+      background-color: rgba(255, 255, 255, 0.7);
+      -webkit-box-shadow: inset 0 0 5px 5px #FFF;
+      box-shadow: inset 0 0 5px 5px #FFF;
+      -webkit-border-radius: 15px 15px 15px 15px;
+      border-radius: 15px 15px 15px 15px; }
     .onimm-container .onimm-svg .legend-container .legend-text-foreignObject .legend-text-body .legend-text {
       font-size: 14px; }
     .onimm-container .onimm-svg .legend-container .legend-instructions-foreignObject .legend-instructions-body .legend-instructions {
@@ -92,3 +101,5 @@
       display: none;
       color: rgba(0, 0, 0, 0.9);
       font-size: 10px; }
+    .onimm-container .onimm-svg .info-job-container .info-job-foreignObject .info-job-body .info-job {
+      cursor: move; }
