--- a/css/onimm-theme.css
+++ b/css/onimm-theme.css
@@ -7,7 +7,8 @@
   font-style: normal;
   font-weight: normal; }
 .onimm-container {
-  font-family: 'exoregular', Verdana, sans-serif; }
+  font-family: 'exoregular', Verdana, sans-serif;
+  font-size: 12px; }
   .onimm-container .onimm-svg {
     background: #ffffff;
     background: -moz-radial-gradient(center, ellipse cover, white 0%, #b8e2f6 88%, #d9edfc 100%);
@@ -32,7 +33,7 @@
       .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body {
         background: transparent; }
         .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text {
-          font-size: 14.5px;
+          font-size: 1.2em;
           text-shadow: 0 1px 2px #8b87ff; }
           .onimm-container .onimm-svg .jobs-container .jobs .jobs-text-foreignObject .jobs-text-body .jobs-text::first-letter {
             text-transform: uppercase; }
@@ -41,51 +42,52 @@
       cursor: help; }
     .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job {
       cursor: text;
-      background-color: rgba(255, 255, 255, 0.6);
+      background-color: rgba(255, 255, 255, 0.8);
       -webkit-box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
       box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.9);
       -webkit-border-radius: 10px 10px 10px 10px;
       border-radius: 10px 10px 10px 10px; }
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-title {
         font-family: Verdana, sans-serif;
-        font-size: 12.5px;
+        font-size: 1.2em;
         color: #0D7B92; }
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-text {
         font-family: Verdana, sans-serif;
-        font-size: 10px; }
+        font-size: 1.1em; }
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-text-interet {
         font-family: Verdana, sans-serif;
-        font-size: 10px; }
+        font-size: 1.1em; }
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-job-more {
         font-family: Verdana, sans-serif;
         font-weight: bolder;
-        font-size: 8px; }
+        font-size: 0.9em; }
       .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close .info-close-icon {
         cursor: default; }
         .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job .info-close .info-close-icon:hover {
-          width: 35px; }
+          width: 3em; }
     .onimm-container .onimm-svg .legend-container .legend-foreignObject .legend-body .legend-div {
       background-color: rgba(255, 255, 255, 0.7);
       -webkit-box-shadow: inset 0 0 5px 5px #FFF;
       box-shadow: inset 0 0 5px 5px #FFF;
-      -webkit-border-radius: 15px 15px 15px 15px;
-      border-radius: 15px 15px 15px 15px; }
+      -webkit-border-radius: 1.2em 1.2em 1.2em 1.2em;
+      border-radius: 1.2em 1.2em 1.2em 1.2em; }
     .onimm-container .onimm-svg .legend-container .legend-text-foreignObject .legend-text-body .legend-text {
-      font-size: 14px; }
+      font-size: 1.2em; }
     .onimm-container .onimm-svg .legend-container .legend-instructions-foreignObject .legend-instructions-body .legend-instructions {
-      font-size: 11px; }
+      font-size: 0.9em; }
     .onimm-container .onimm-svg .legend-container .legend-close-foreignObject .legend-close-body .legend-close-icon {
       cursor: default; }
     .onimm-container .onimm-svg .historic-container .historic-image-foreignObject .historic-image-body .historic-image {
       cursor: help; }
     .onimm-container .onimm-svg .historic-container .historic-title-foreignObject .historic-title-body .historic-title {
       font-weight: bold;
-      font-size: 15px; }
+      font-size: 1.3em;
+      color: #9D0D15; }
     .onimm-container .onimm-svg .historic-container .hist-nodes .hist-circle {
       fill: #aaaaaa;
       stroke-width: 2.5px; }
     .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div .hist-nodes-text {
-      font-size: 11px;
+      font-size: 0.9em;
       text-shadow: 0 1px 2px #8b87ff; }
       .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div .hist-nodes-text::first-letter {
         text-transform: uppercase; }
@@ -100,6 +102,6 @@
     .onimm-container .onimm-svg .other-jobs-container .other-jobs .other-jobs-text-foreignObject .other-jobs-text-body .other-jobs-text {
       display: none;
       color: rgba(0, 0, 0, 0.9);
-      font-size: 10px; }
+      font-size: 0.85em; }
     .onimm-container .onimm-svg .info-job-container .info-job-foreignObject .info-job-body .info-job {
       cursor: move; }
