--- a/css/scss/onimm-theme.scss
+++ b/css/scss/onimm-theme.scss
@@ -12,6 +12,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 
 .onimm-container {
 	font-family: 'exoregular', Verdana, sans-serif;
+	font-size: 12px;
 
 	.onimm-svg {
 		@include onimm_gradient();
@@ -48,7 +49,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 						background: transparent;
 
 						.jobs-text {
-							font-size: 14.5px;
+							font-size: 1.2em;
 							text-shadow: 0 1px 2px $blue_text_shadow;
 							&::first-letter {
 								text-transform: uppercase;
@@ -80,7 +81,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 					cursor: text;
 
 
-					background-color: rgba(255,255,255,0.6);
+					background-color: rgba(255,255,255,0.8);
 
 					-webkit-box-shadow: 0 0 15px 5px rgba(0,0,0,0.9);
 				     		box-shadow: 0 0 15px 5px rgba(0,0,0,0.9);
@@ -90,27 +91,27 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 
 					.info-job-title {
 						font-family: Verdana, sans-serif;
-						font-size: 12.5px;
+						font-size: 1.2em;
 						color: #0D7B92;
 					}
 					.info-job-text {
 						font-family: Verdana, sans-serif;
-						font-size: 10px;
+						font-size: 1.1em;
 					}
 					.info-job-text-interet {
 						font-family: Verdana, sans-serif;
-						font-size: 10px;
+						font-size: 1.1em;
 					}
 					.info-job-more {
 						font-family: Verdana, sans-serif;
 						font-weight: bolder;
-						font-size: 8px;
+						font-size: 0.9em;
 					}
 					.info-close {
 						.info-close-icon {
 							cursor: default;
 							&:hover {
-								width:35px;
+								width:3em;
 							}
 						}
 					}
@@ -126,8 +127,8 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 						background-color: rgba(255,255,255,0.7);
 						-webkit-box-shadow: inset 0 0 5px 5px #FFF;
 								box-shadow: inset 0 0 5px 5px #FFF;
-						-webkit-border-radius: 15px 15px 15px 15px;
-								border-radius: 15px 15px 15px 15px;
+						-webkit-border-radius: 1.2em 1.2em 1.2em 1.2em;
+								border-radius: 1.2em 1.2em 1.2em 1.2em;
 					}
 				}
 			}
@@ -143,7 +144,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 			.legend-text-foreignObject {
 				.legend-text-body {
 					.legend-text {
-						font-size: 14px;
+						font-size: 1.2em;
 					}
 				}
 			}
@@ -151,7 +152,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 			.legend-instructions-foreignObject {
 				.legend-instructions-body {
 					.legend-instructions {
-						font-size: 11px;
+						font-size: 0.9em;
 					}
 				}
 			}
@@ -182,7 +183,8 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 				.historic-title-body {
 					.historic-title {
 						font-weight: bold;
-						font-size: 15px;
+						font-size: 1.3em;
+						color: #9D0D15;
 					}
 				}
 			}
@@ -197,7 +199,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 					.hist-nodes-body {
 						.hist-nodes-div {
 							.hist-nodes-text {
-								font-size: 11px;
+								font-size: 0.9em;
 								text-shadow: 0 1px 2px $blue_text_shadow;
 								&::first-letter {
 									text-transform: uppercase;
@@ -246,7 +248,7 @@ $color_other_jobs_text: rgba(0,0,0,0.9);
 						.other-jobs-text {
 							display: none;
 							color: $color_other_jobs_text;
-							font-size: 10px;
+							font-size: 0.85em;
 						}
 					}
 				}
