--- a/css/onimm-main.css
+++ b/css/onimm-main.css
@@ -13,16 +13,14 @@
     padding: 2px;
     width: 120px;
     text-align: center; }
-  .onimm-container .onimm-svg .jobs-container .jobs .bubble-foreignObject .bubble-body .bubble {
-    position: relative;
-    margin: -7px 0 0 -7px;
-    width: 38px;
-    height: 38px; }
-  .onimm-container .onimm-svg .jobs-container .jobs .bubble-foreignObject .bubble-body .bubble-info-icon {
-    position: relative;
-    margin: -8px 0 0 -8px;
-    width: 60px;
-    height: 60px; }
+  .onimm-container .onimm-svg .jobs-container .jobs .bubble-foreignObject .bubble-body {
+    margin: 0; }
+    .onimm-container .onimm-svg .jobs-container .jobs .bubble-foreignObject .bubble-body .bubble {
+      position: relative;
+      width: 100%; }
+    .onimm-container .onimm-svg .jobs-container .jobs .bubble-foreignObject .bubble-body .bubble-info-icon {
+      position: relative;
+      width: 100%; }
   .onimm-container .onimm-svg .info-job-foreignObject .info-job-body {
     margin: 25px; }
     .onimm-container .onimm-svg .info-job-foreignObject .info-job-body .info-job {
@@ -57,11 +55,10 @@
     margin: 0; }
   .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div {
     margin: -10px 0 0 25px; }
-  .onimm-container .onimm-svg .historic-container .hist-nodes .hist-bubble-foreignObject .hist-bubble-body .hist-bubble {
-    position: relative;
-    margin: -40px 0 0 -6.5px;
-    width: 19px;
-    height: 19px; }
+  .onimm-container .onimm-svg .historic-container .hist-nodes .hist-bubble-foreignObject .hist-bubble-body {
+    margin: 0; }
+    .onimm-container .onimm-svg .historic-container .hist-nodes .hist-bubble-foreignObject .hist-bubble-body .hist-bubble {
+      position: relative; }
   .onimm-container .onimm-svg .other-jobs-container .other-jobs .other-jobs-bubble-foreignObject .other-jobs-bubble-body {
     margin: 0; }
     .onimm-container .onimm-svg .other-jobs-container .other-jobs .other-jobs-bubble-foreignObject .other-jobs-bubble-body .other-jobs-bubble {
