Historic slide in and out began ; still need more design

--- a/css/onimm-main.css
+++ b/css/onimm-main.css
@@ -51,6 +51,8 @@
     margin: -5px 0 0 0; }
   .onimm-container .onimm-svg .legend-container .legend-close-foreignObject .legend-close-body {
     margin: 0; }
+  .onimm-container .onimm-svg .get-historic-container .get-historic-image-foreignObject .get-historic-image-body {
+    margin: 0; }
   .onimm-container .onimm-svg .historic-container .historic-image-foreignObject .historic-image-body {
     margin: 0; }
   .onimm-container .onimm-svg .historic-container .hist-nodes .hist-nodes-foreignObject .hist-nodes-body .hist-nodes-div {
