--- a/css/scss/onimm-main.scss
+++ b/css/scss/onimm-main.scss
@@ -132,6 +132,29 @@
 			}
 		}
 
+		.get-historic-container {
+
+			.get-historic-image-foreignObject {
+
+				.get-historic-image-body {
+					margin: 0;
+					.get-historic-image {
+
+					}
+
+				}
+
+			}
+
+			.get-historic-title-foreignObject {
+				.get-historic-title-body {
+					.get-historic-title {
+
+					}
+				}
+			}
+		}
+
 		.historic-container {
 
 			.historic-image-foreignObject {
